# isaac_rover_physical_2.0

./: .gitignore  .gitmodules  Heightmap.pt  Original.pt  README.md  Transformed.pt  all.launch.py  logfile.txt
Docker/: Dockerfile  ros_entrypoint.sh  run.sh
KIMERA/changed_files/: Dockerfile  overlay.repos  underlay.repos  wrapper.repos
Schematics/: Electrical overview.drawio
Tests/Student/: logfile1.txt  logfile2.txt  logfile3.txt  logfile4.txt  logfile5.txt
Tests/Teacher/: logfile1.txt  logfile2.txt  logfile3.txt  logfile4.txt  logfile5.txt
Video_client/: client.py
isaac_ros-dev/: README.md
isaac_ros-dev/qr_detector/: qr_detection.py
isaac_ros-dev/src/odom_pubsub/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/odom_pubsub/odom_pubsub/: README.md  camera_noise_publisher.py  camera_noise_subscriber.py  check_imu.py  check_odom.py
isaac_ros-dev/src/qr_detector/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/rob10_launch/: double.launch.py  single_ROB10.launch.py
not_used_code/: CameraSys.py  Camera_node.py  Kinematics_node.py  Pos_camera.py  Pos_camera2.py  kinematicsCPU.py  multized.py  poscamera3.py
remote_client/: client.py
rover_msgs/: CMakeLists.txt  package.xml
src/controller/: package.xml  setup.py
src/controller/config/: C5-E-2-09.eds  encoder.txt  odscript.txt
src/controller/controller/: Kinematics_node.py  joystick.py  (+3 more)
src/log/: latest_list
src/remote_ctrl_interface/: fastrtps_cfg.xml  package.xml  setup.cfg  setup.py
src/rl_camera/: package.xml  setup.cfg  setup.py
src/rover_msgs/: CMakeLists.txt  package.xml
(+49 files in other folders)
